// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration: subscriptions authenticated user with GitHub App installed Legacy subscriptions: subscribing to a repo that's already reactivated works as normal 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C0D70MRAL> to <https://github.com/atom/atom|atom/atom>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed Legacy subscriptions: subscribing to a repo that's already reactivated works as normal 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Unsubscribed <#C0D70MRAL> from <https://github.com/atom/atom|atom/atom>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed Legacy subscriptions: subscribing to a repo that's already reactivated works as normal 3`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C0D70MRAL> to <https://github.com/atom/atom|atom/atom>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed Legacy subscriptions: subscribing to a repo whose legacy configuration is not already reactivated is disabled 1`] = `
Object {
  "payload": "{\\"action\\":\\"mark_subscribed\\",\\"repo\\":{\\"full_name\\":\\"atom/atom\\",\\"id\\":\\"3228505\\"},\\"service_type\\":\\"github\\"}",
  "service": "13037131345",
  "token": "xoxp-token",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed Legacy subscriptions: subscribing to a repo whose legacy configuration is not already reactivated is disabled 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C0D70MRAL> to <https://github.com/atom/atom|atom/atom>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing to a repo that does not exist 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not find resource: \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing to a repo that the user does not have acccess to 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not find resource: \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing when already subscribed 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "You're already subscribed to \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed subscribing with a bad url 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "\`wat?\` does not appear to be a GitHub link.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed successfully subscribing and unsubscribing to a repository 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed successfully subscribing and unsubscribing to a repository 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Unsubscribed <#C2147483705> from <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed successfully subscribing with repository shorthand 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing from a specific type of notification 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "text": "Subscribed <#C2147483705> to <https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing from a specific type of notification 2`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "footer": "<https://github.com/integrations/slack#configuration|Learn More>",
      "mrkdwn_in": Array [
        "text",
        "footer",
      ],
      "text": "<#C2147483705> will get notifications from <https://github.com/bkeepers/dotenv|bkeepers/dotenv> for: 
\`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing from a specific type of notification 3`] = `
Object {
  "attachments": Array [
    Object {
      "color": "#24292f",
      "footer": "<https://github.com/integrations/slack#configuration|Learn More>",
      "mrkdwn_in": Array [
        "text",
        "footer",
      ],
      "text": "<#C2147483705> will get notifications from <https://github.com/bkeepers/dotenv|bkeepers/dotenv> for: 
\`issues\`, \`pulls\`, \`deployments\`, \`statuses\`, \`public\`, \`commits\`",
    },
  ],
  "response_type": "in_channel",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing when not subscribed 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "You're not currently subscribed to \`atom/atom\`
Use \`/github subscribe atom/atom\` to subscribe.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user with GitHub App installed unsubscribing with a bad url 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "\`wat?\` does not appear to be a GitHub link.",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user without the GitHub App installed organization is not found 1`] = `
Object {
  "attachments": Array [
    Object {
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Could not find resource: \`atom/atom\`",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user without the GitHub App installed owner type is organization 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "url-is-stripped",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Either the app isn't installed on your repository or the repository does not exist. Install it to proceed.
_Note: You need to be an organization owner to install the app (or ask one to install it for you)._",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user without the GitHub App installed owner type is other user 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "url-is-stripped",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Either the app isn't installed on your repository or the repository does not exist. Install it to proceed.
_Note: You will need to ask the owner of the repository to install it for you._",
    },
  ],
  "response_type": "ephemeral",
}
`;

exports[`Integration: subscriptions authenticated user without the GitHub App installed user is repo owner 1`] = `
Object {
  "attachments": Array [
    Object {
      "actions": Array [
        Object {
          "style": "primary",
          "text": "Install GitHub App",
          "type": "button",
          "url": "url-is-stripped",
        },
      ],
      "color": "danger",
      "mrkdwn_in": Array [
        "text",
      ],
      "text": "Either the app isn't installed on your repository or the repository does not exist. Install it to proceed.",
    },
  ],
  "response_type": "ephemeral",
}
`;
